# todosky

./: '  Cargo.toml  LICENSE  README.md  ]  thefile.yml
src/: app.rs  file_utils.rs  lib.rs  main.rs  paint.rs  paths.rs  task.rs  toast.rs
src/app/: app.rs  mod.rs  state.rs
src/task/: graph.rs  mod.rs  task.rs
