[package]
name = "todosky"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
eframe = "0.34.0"
egui = { version = "0.34.0", features = ["serde"] }
env_logger = "0.11.9"
log = "0.4.29"
rand = "0.10.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_yaml = "0.9.34"
slotmap = { version = "1.1.1", features = ["serde"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
